# juris-ai

./: .gitignore  README.md
.github/workflows/: deploy-to-dev.yml  deploy-to-prod.yml
backend/: Makefile  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py
backend/api/v1/: __init__.py  analytics.py  contract.py  user.py
backend/api/v1/monitoring/: health.py
backend/app/: container.py
backend/app/analytics/: analytics_controller.py  analytics_models.py  analytics_repository.py
backend/app/contract/: contract_controller.py  contract_models.py  contract_processor.py  contract_repository.py  contract_review.py  contract_utils.py
backend/app/shared/models/: mongodb_models.py  root_models.py
backend/app/user/: user_controller.py  user_models.py  user_repository.py
backend/core/: config.py  server.py
backend/core/aws/: secrets_manager.py
backend/core/cache/: redis_backend.py
backend/core/database/: mongodb.py
backend/core/dependencies/: current_user.py  openai.py
backend/core/middlewares/: authentication.py
backend/core/security/: jwt.py  password.py
backend/docker/: Dockerfile.lambda  Dockerfile.layer
frontend/: .eslintignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: app.tsx
frontend/src/configs/: app-config.ts
frontend/src/pages/: index.tsx  login.tsx  register.tsx
frontend/src/routes/: paths.ts
frontend/src/theme/: css.ts  (+3 more)
infra/: .gitignore  package-lock.json  package.json
infra/lib/: backend-stack.ts  frontend-stack.ts
(+82 files in other folders)
